minor changes - naming etc